letak judul portfolio dan link github

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column col-md-12">
 
       <div class="profile">
         <img src="/assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Deny Frans Sitohang</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://linkedin.com/in/deny-frans-sitohang-75a678198" target="blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/denyfrans94" target="blank" class="GitHub"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/denyfranssitohang" target="blank" class="GitHub"><i class="bx bxl-github"></i></a>
         </div>
       </div>
 
@@ -218,8 +218,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
+              <h5>Titanic - Machine Learning From Disaster</h5>
               <img src="assets/img/portfolio/titanic.jpg" class="img-fluid" alt="">
-              <p>Titanic - Machine Learning From Disaster</p>
+              
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Titanic - Machine Learning From Disaster.html" target="blank"title="View Details"><i class="bx bx-file-blank"></i></a>
                 <a href="https://github.com/denyfrans94/Titanic---Machine-Learning-From-Disaster.git" target="blank" title="View Github"><i class="bx bxl-github"></i></a>
@@ -229,8 +230,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-python">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/fifa.jpg" class="img-fluid" alt="">
-              <p>Linear Regression (Predicting Goal Scored)</p>
+              <h5>Linear Regression (Predicting Goal Scored)</h5>
+              <img src="assets/img/portfolio/fifa.jpg" class="img-fluid" alt="">              
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Predicting Goal Scored.html" target="blank" title="View Details"><i class="bx bx-file-blank"></i></a>
                 <a href="https://github.com/denyfrans94/Linear-Regression.git" target="blank"title="View Github"><i class="bx bxl-github"></i></a>
@@ -240,8 +241,8 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item ">
             <div class="portfolio-wrap">
+              <h5>Project Machine Learning for Retail with R: Product Packaging</h5>
               <img src="assets/img/portfolio/R-Product_Packging.png" class="img-fluid" alt="">
-              <p>Project Machine Learning for Retail with R: Product Packaging</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/R_ Product Packaging.html" target="blank" title="View Details"><i class="bx bx-file-blank"></i></a>
                 <a href="https://github.com/denyfrans94/Project-Machine-Learning-for-Retail-with-R_-Product-Packaging.git" target="blank" title="View Github"><i class="bx bxl-github"></i></a>
