--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Welcome</h1>
       <h2>My Name is Deny Frans Sitohang</h2>
-      <p>I'm <span class="typed" data-typed-items="Data Enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Data Enthusiast and Staff Programmer"></span></p>
     </div>
   </section>
   <!-- End Hero -->
@@ -80,8 +80,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>I always have a passionate intellectual curiosity. In my experience, I learned that data is a power that can drive a business to move forward or even move backward.
-            Then I decided to focus on studying and building a career in data science with a passion to live it.
+          <p>I always have a passionate intellectual curiosity. In my experience, I learned that data is a power that can drive a business to move forward or even move backward. Then I explore data, ways, and the tools to get insights for business development and other things with a passion to live it.
           </p>
         </div>
 
@@ -105,7 +104,7 @@
 
               <div class="col-lg-6">
                 <ul>
-                  <li><strong>Addres:</strong> Bangka Road No. 2a, Kel. Pela Mampang, Kec. Mampang Prapatan, Jakarta Selatan, 12720</li>
+                  <li><strong>Addres:</strong> Jl. Bangka 2a No. 14, Kel. Pela Mampang, Kec. Mampang Prapatan, Jakarta Selatan, 12720</li>
                   <li><strong>Phone:</strong> +6285358872392</li>
                   <li><strong>Email:</strong> denyfranssitohang@gmail.com</li>
                   <li><strong>City:</strong> Jakarta, Indonesia</li>
@@ -149,14 +148,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill">R <i class="val">70%</i></span>
+              <span class="skill">Javascript <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill">Laravel <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">HTML & CSS <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -184,6 +190,13 @@
               <span class="skill">Data Visualitation <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Neo4J <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -268,14 +281,19 @@
           <h4 class="resume-title2">Experience</h4>
         </div>
 
-        <div class="row info-experience">
+        <div class="row info-experience">            
           <div class="col-lg-6" data-aos="fade-up">
+          	<div class="resume-item pb-0">
+              <h4>Staff Programmer</h4>
+              <h5>June 2020 - Present</h5>
+              <br>BFI Technologies - A company engaged in Data Research<br><em>Jl. Tebet Barat Dalam V No. 26 Jakarta Selatan Indonesia</em></br></p>
+            </div>
             <div class="resume-item pb-0">
               <h4>Admin Payroll</h4>
               <h5>June 2018 - March 2020                  
                 <a href="https://drive.google.com/open?id=14NK3M05f0YNbq4aPr1DfXvD8s0ZtFgwM" target="blank" title="View Certificate"><i class="bx bx-file-blank"></i>
               </a></h5>
-              <br>PT. Triwisnna - A sub-contract company engaged in coal mining<br><em>Yos Sudarso Road II RT.11 Sangatta Utara, Kutai Timur, Kaltim</em></br></p>
+              <br>PT. Triwisnna - A sub-contract company engaged in Coal Mining<br><em>Jl. Yos Sudarso II RT.11 Sangatta Utara, Kutai Timur, Kaltim</em></br></p>
               <ul>
                 <li>Make a salary calculations (number of employees ± 500 people)</li>
                 <li>Make a salary reports, bpjs, PPh 21, and other salary components</li>
@@ -291,7 +309,7 @@
             <div class="resume-item">
               <h4>IT Support (Freelance)</h4>
               <h5>February – October 2017</h5>
-              <br>PT. Mitra Infoparama - A company engaged in IT services<br><em>H. Moh Yamin Road, No 216, Medan</em></br></p>
+              <br>PT. Mitra Infoparama - A company engaged in IT Services<br><em>Jl. H. Moh Yamin, No 216, Medan</em></br></p>
               <ul> Project, SKCK Online in Sumatera Utara :
                 <li>Layer support</li>
                 <li>Monitoring software and hardware</li>
@@ -314,10 +332,10 @@
             <div class="resume-item pb-2 info-experience">
               <h4>Bachelor of Informatic Engineering - Scientific Computing</h4>
               <h5>2011 – 2016</h5>
-              <br>STMIK-STIE Mikroskil Medan<br><em>M.H Thamrin Road No.140, Sei Rengas II, Medan, Sumatera Utara</em></br></p>
+              <br>STMIK-STIE Mikroskil Medan<br><em>Jl. M.H Thamrin No.140, Sei Rengas II, Medan, Sumatera Utara</em></br></p>
               <h4>SMA N 1 Ujungbatu - Science</h4>
               <h5>2008 – 2011</h5>
-              <p><em>Jendral Sudirman Road NO. 17, Ujung Batu, Rokan Hulu, Riau</em></p>
+              <p><em>Jl. Jendral Sudirman No. 17, Ujung Batu, Rokan Hulu, Riau</em></p>
             </div>
           </div>  
 
