--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="/assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Deny Frans Sitohang</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://linkedin.com/in/deny-frans-sitohang-75a678198" target="blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -86,7 +86,7 @@
 
         <div class="row">
           <div class="col-lg-3" data-aos="fade-right">
-            <img src="/assets/img/profile2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-8 pt-lg-0 content" data-aos="fade-left">
 
@@ -273,8 +273,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <a href='https://drive.google.com/file/d/1Gavd4cYYcjCN2QCe2kozBt-T4qYLvjtR/view?usp=sharing'
-                   target="blank" rel='stylesheet'><i>Click Here to Download Resume</i> </a>
+          <a href='https://drive.google.com/file/d/1UZWgMXH6rJhkyYjSbN0etjg8DWpIktlX/view?usp=sharing'
+                   target="blank" rel='stylesheet'><i>Click Here to Download CV</i> </a>
         </div>
 
         <div class="section-title" >
