--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">70%</i></span>
+              <span class="skill">SQL <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -289,7 +289,7 @@
               <br>BFI Technologies - A company engaged in Data Research<br><em>Jl. Tebet Barat Dalam V No. 26 Jakarta Selatan Indonesia</em></br></p>
             </div>
             <div class="resume-item pb-0">
-              <h4>Admin Payroll</h4>
+              <h4>Payroll Administration</h4>
               <h5>June 2018 - March 2020                  
                 <a href="https://drive.google.com/open?id=14NK3M05f0YNbq4aPr1DfXvD8s0ZtFgwM" target="blank" title="View Certificate"><i class="bx bx-file-blank"></i>
               </a></h5>
