--- a/index.html
+++ b/index.html
@@ -287,6 +287,11 @@
               <h4>Staff Programmer</h4>
               <h5>June 2020 - Present</h5>
               <br>BFI Technologies - A company engaged in Data Research<br><em>Jl. Tebet Barat Dalam V No. 26 Jakarta Selatan Indonesia</em></br></p>
+              <ul>
+                <li>Web Developer</li>
+                <li>Data Scraping</li>
+                <li>Data Visualization</li>                
+               </ul>
             </div>
             <div class="resume-item pb-0">
               <h4>Payroll Administration</h4>
@@ -302,6 +307,7 @@
                 <li>Make monthly and annual PPh 21 reports</li>
                 <li>Make a salary report for analysing monthly salary and evaluation of overtime</li>
                 <li>Make a quarterly company purchase reports</li>
+               </ul>
             </div>
           </div>
 
